fixed bug with number not showing properly, also with duplicate setting of date

--- a/src/stylus/components/_date-picker.styl
+++ b/src/stylus/components/_date-picker.styl
@@ -115,6 +115,7 @@
       &__content
         overflow: visible
         transition: none
+        z-index: 1
       
     .btn.btn--floating.btn--current:not(.btn--active)
       color: rgba($theme.primary, .6)
